        longer export empty groups.
    - speed up ssh tarball generation: No longer write indidividual user's ssh
      authorized_keys to disk, only to read them later.  Directly create a
      TarInfo object without referring to any on-disk files.
    - get rid of global state variable CurrentHost.  This will enable upcoming
      changes.

  [ Stephen Gran ]
  * Fix deprecation warnings for sha module by using hashlib module instead
  * ud-fingerserv: update Net::LDAP import
  * Implement audit logging for ldap
  * stop running ud-generate if nothing has changed, based on audit logs

  [ Martin Zobel-Helas ]
  * ud-generate: generate webPasswords
  * ud-replicate: set correct permissions for web-passwords
  * add freecdb to depends

 -- Peter Palfrader <weasel@debian.org>  Mon, 12 Mar 2012 15:15:36 +0100

userdir-ldap (0.3.79) unstable; urgency=low

  * Add ud-sync-accounts-to-afs, a script to sync accounts to an
    AFS protection database.
  * ud-generate:
    - support host ACLs that expire.
    - lock output directory when generating.
    - support sync keyring dirs now too.
  * ud-useradd: A new -g switch for adding guest accounts, with
    proper setting hostacls and shadowexpire and picking the
    right keyring.
  * Remove .pgp (v3 pgp key) keyrings from config.
  * Update guest welcome template.
  * ud-gpgimport: handle guest keyrings.
  * ud-mailgate:
    - Make updating of gender actually work.
    - Do not mess with sudo passwords if nothing changed.
  * templates/change-reply: say a word about subjects in mail to admin@db.
  * move gpgwrapper to unmaintained/ - it is now using obsolete interfaces.
  * try to properly handle some more mime stuff.
    - use email module instead of deprecated mimetools and multifile modules
    - changes: sigcheck ud-echelon ud-mailgate userdir_gpg.py
  * move ud-echelon and sigcheck to GPGCheckSig2 interface.

 -- Peter Palfrader <weasel@debian.org>  Sat, 21 May 2011 14:53:18 +0200
