@@ -43,6 +43,7 @@ userdir-ldap (0.3.80) UNRELEASED; urgency=low
       TarInfo object without referring to any on-disk files.
     - get rid of global state variable CurrentHost.  This will enable upcoming
       changes.
+    - UDLdap.py: make a cache for __getitem__() decisions.
 
   [ Stephen Gran ]
   * Fix deprecation warnings for sha module by using hashlib module instead
@@ -55,7 +56,7 @@ userdir-ldap (0.3.80) UNRELEASED; urgency=low
   * ud-replicate: set correct permissions for web-passwords
   * add freecdb to depends
 
- -- Peter Palfrader <weasel@debian.org>  Mon, 12 Mar 2012 15:15:36 +0100
+ -- Peter Palfrader <weasel@debian.org>  Mon, 12 Mar 2012 15:47:13 +0100
 
 userdir-ldap (0.3.79) unstable; urgency=low
 
